tests/spec/format/snapshots/import_line_comment_stays_with_its_own_import.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:a"; import "go:b" // b
  fn main() {}
---
import "go:a"
import "go:b" // b

fn main() {}
