tests/spec/format/snapshots/import_multiple_sorted.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:os"
  import "go:fmt"
  import "go:io"
---
import "go:fmt"
import "go:io"
import "go:os"
