tests/spec/format/snapshots/import_only_go.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:strings"
  import "go:fmt"
  import "go:os"
---
import "go:fmt"
import "go:os"
import "go:strings"
