tests/spec/format/snapshots/import_only_local.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "display"
  import "commands"
  import "store"
---
import "commands"
import "display"
import "store"
