tests/spec/format/snapshots/import_sort_with_prefix.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:crypto"
  import "go:crypto/ecdh"
  import "go:io"
  import "go:math/big"
---
import "go:crypto"
import "go:crypto/ecdh"
import "go:io"
import "go:math/big"
