tests/spec/format/snapshots/import_split_across_lines_keeps_its_line_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  import
    "go:fmt" // why
  fn main() {}
---
import "go:fmt" // why

fn main() {}
