tests/spec/format/snapshots/import_with_leading_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  // Generated by bindgen
  // Source: bytes
  
  import "go:io"
  import "go:fmt"
---
// Generated by bindgen
// Source: bytes

import "go:fmt"
import "go:io"
