tests/spec/format/snapshots/index_access.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { arr[0] }"
---
fn test() {
  arr[0]
}
