tests/spec/format/snapshots/interface_empty.snap
---
source: tests/spec/format/mod.rs
description: "input: interface Empty {}"
---
interface Empty {}
