tests/spec/format/snapshots/interface_method_with_attribute.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface Cache {
    #[go(comma_ok)]
    fn Get(key: string) -> Option<Ref<Value>>
    fn Put(key: string, val: Ref<Value>)
  }
---
interface Cache {
  #[go(comma_ok)]
  fn Get(key: string) -> Option<Ref<Value>>
  fn Put(key: string, val: Ref<Value>)
}
