tests/spec/format/snapshots/interface_simple.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface Display {
    fn fmt() -> string;
  }
---
interface Display {
  fn fmt() -> string
}
